homepage: -line spacing issues fixed -changed layout for content 3

--- a/home/css/home.css
+++ b/home/css/home.css
@@ -113,6 +113,7 @@ body {
 #content3_main_img_container {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 1rem;
 }
 
@@ -120,11 +121,11 @@ body {
 #content3_img2_container,
 #content3_img3_container,
 #content3_img4_container {
-  border-radius: 1.938rem;
+  border-radius: 1rem;
   /* width: 16rem;
   height: 12rem; */
-  width: 16rem;
-  height: 12rem;
+  width: 20%;
+  height: 15%;
   background-size: auto;
   margin: 0;
   padding: 0;
@@ -173,14 +174,14 @@ body {
 
 #content4_header_line3 {
   font-family: "Proxima Nova Extra Bold";
-  font-size: 4.5rem;
+  font-size: 5rem;
   color: #339e3d;
   line-height: 4rem;
 }
 
 #DAMBO {
   color: #339e3d;
-  font-size: 4.5rem;
+  font-size: 5rem;
 }
 
 .content4_details_container1 {
@@ -192,7 +193,7 @@ body {
 #content4_details_line2,
 #content4_details_line3 {
   font-family: "Proxima Nova";
-  font-size: 2rem;
+  font-size: 1.5rem;
   line-height: 42px;
   text-align: start;
 }
@@ -245,7 +246,7 @@ body {
   height: fit-content;
 }
 
-#FOR_FREE{
+#FOR_FREE {
   font-family: "Proxima Nova Extra Bold";
 }
 
@@ -388,12 +389,12 @@ body {
 
   #DAMBO {
     color: #339e3d;
-    font-size: 9rem;
+    font-size: 8rem;
   }
 
   #content4_header_line3 {
     font-weight: bold;
-    font-size: 9rem;
+    font-size: 8rem;
     color: #339e3d;
     line-height: 7rem;
   }
@@ -419,7 +420,7 @@ body {
   #content4_header_line2 {
     font-weight: bold;
     font-size: 4rem;
-    line-height: 5rem;
+    line-height: 3rem;
   }
 
   #DAMBO {
@@ -429,7 +430,7 @@ body {
 
   #content4_header_line3 {
     font-weight: bold;
-    font-size: 6rem;
+    font-size: 5rem;
     color: #339e3d;
     line-height: 5rem;
   }
@@ -438,7 +439,7 @@ body {
   #content4_details_line2,
   #content4_details_line3 {
     font-weight: 300;
-    font-size: 2.5rem;
+    font-size: 1.8rem;
     line-height: 42px;
   }
 
@@ -477,17 +478,17 @@ body {
   #content4_header_line2 {
     font-weight: bold;
     font-size: 4rem;
-    line-height: 5rem;
+    line-height: 3rem;
   }
 
   #DAMBO {
     color: #339e3d;
-    font-size: 7rem;
+    font-size: 5rem;
   }
 
   #content4_header_line3 {
     font-weight: bold;
-    font-size: 7rem;
+    font-size: 5rem;
     color: #339e3d;
     line-height: 4rem;
   }
@@ -496,7 +497,7 @@ body {
   #content4_details_line2,
   #content4_details_line3 {
     font-weight: 300;
-    font-size: 2.5rem;
+    font-size: 1.8rem;
     line-height: 42px;
   }
 }
@@ -547,11 +548,15 @@ body {
     line-height: 1rem;
   }
 
+  #content3_main_img_container {
+    gap: 1rem;
+  }
+
   #content3_img1_container,
   #content3_img2_container,
   #content3_img3_container,
   #content3_img4_container {
-    margin: 1rem;
+    margin: 0;
   }
 
   .content4_left_container {
@@ -752,6 +757,33 @@ body {
   #content1_header_line4 {
     font-size: 3.5rem;
   }
+
+  #content4_header_line1 {
+    font-weight: bold;
+    font-size: 2rem;
+  }
+  #content4_header_line2 {
+    font-weight: bold;
+    font-size: 2rem;
+    line-height: 1.5rem;
+  }
+
+  #DAMBO {
+    font-size: 3rem;
+  }
+
+  #content4_header_line3 {
+    font-weight: bold;
+    font-size: 3rem;
+    color: #339e3d;
+  }
+
+  #content4_details_line1,
+  #content4_details_line2,
+  #content4_details_line3 {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
 }
 
 @media screen and (max-width: 380px) {
@@ -765,12 +797,12 @@ body {
 
   #DAMBO {
     color: #339e3d;
-    font-size: 3rem;
+    font-size: 2.9rem;
   }
 
   #content4_header_line3 {
     font-weight: bold;
-    font-size: 3rem;
+    font-size: 2.9rem;
     line-height: 2rem;
   }
 
